trip: add route & place resources